--- a/index.html
+++ b/index.html
@@ -78,18 +78,16 @@
 			<div class="swiper-container changing">
 				<div class="swiper-wrapper">
 				    <div class="swiper-slide">
-			    		<div class="desc">
-			    			<p>享受试衣的乐趣</p>
-			    			<p>自助排队，方便有序，试衣简单快捷。</p>
-			    			<div class="pay"><img src="__PUBLIC__/Image/yhxt/financial/icon-pay.png"  /></div>
-			    			<div class="use_now" data-name="dmsd" >立即使用</div>
-			    		</div>
 			    		<div class="image">
-				    		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 749 664" xml:space="preserve">
-								<image xlink:href="__PUBLIC__/Image/yhxt/financial/first.png" x="0" y="0" height="664px" width="749px"></image>
-								<image id="financial_animate_1" xlink:href="__PUBLIC__/Image/yhxt/financial/first_ani.png" x="63px" y="39px" width="555px" height="179px" ></image>
-							</svg>
+				    		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 833 519" xml:space="preserve">
+								  <image xlink:href="img/changing.png" x="0" y="0" height="519px" width="833px"></image>
+		            </svg>
 			    		</div>
+              <div class="desc">
+                <p>享受试衣的乐趣</p>
+                <p>自助排队，方便有序，试衣简单快捷。</p>
+                <div class="use_now" data-name="dmsd">立即注册使用</div>
+              </div>
 				    </div>
 				 </div>
 			</div>
@@ -112,15 +110,15 @@
       <div class="swiper-container finance">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <div class="image">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 770 513" xml:space="preserve">
-                <image xlink:href="__PUBLIC__/Image/yhxt/market/first.png" x="0" y="0" height="513px" width="770px"></image>
-              </svg>
-              </div>
               <div class="desc">
                 <p>专业化对账服务，对账业务数据一目了然</p>
                 <p>交易明细及库存情况清晰，提供对维度的交易查询功能，</br>交易报表定制等服务，有效减轻财务人员作业工作量。</p>
-                <div class="use_now" data-name="dyjf" >立即使用</div>
+                <div class="use_now" data-name="dyjf" >立即注册使用</div>
+              </div>
+              <div class="image">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 833 544" xml:space="preserve">
+                  <image xlink:href="img/finance.png" x="0" y="0" height="554px" width="833px"></image>
+                </svg>
               </div>
             </div>
          </div>
@@ -228,7 +226,7 @@ $(function(){
 			name:'cashier',
 			classname:'cashier',
 			title:'收银台',
-			position:{x:'0.6800',y:'0.2900'},
+			position:{x:'0.4300',y:'0.7200'},
 			content:{
 				title:'智能POS收单功能强',
 				txt:'支付全通道实现聚合收单</br>多平台优惠卡券核验</br>品牌会员积分管理系统'
@@ -244,7 +242,7 @@ $(function(){
 			name:'changing',
 			classname:'changing',
 			title:'试衣间',
-			position:{x:'0.5290',y:'0.4400'},
+			position:{x:'0.3300',y:'0.6000'},
 			content:{
 				title:'享受自助排队试衣的乐趣',
 				txt:'自助排队，方便有序，试衣简单快捷。'
