--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta name="apple-mobile-web-app-title" content="服装行业解决方案" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="format-detection" content="email=no" />
-		<meta name="author" content="罗时勇, Aero Wang" />
+		<meta name="author" content="罗时勇大师, Aero Wang" />
 		<meta name="renderer" content="webkit">
 		<script src="js/jquery-1.7.1.min.js"></script>
 		<script src="js/idangerous.swiper.min.js"></script>
@@ -25,12 +25,7 @@
 
 	</head>
 	<body>
-		<div class="load">
-			<div class="ani">
-				<div class="circle"></div>
-				<div class="circle_bottom"></div>
-			</div>
-		</div>
+		<div class="load"></div>
 		<!--head 引入-->
 		<!-- <include file="loginHeader"/> -->
 		<!--head 引入 end-->
@@ -42,12 +37,10 @@
 				<div class="swiper-wrapper">
 				    <div class="swiper-slide">
 			    		<div class="image">
-				    		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 770 554" xml:space="preserve">
-								<image xlink:href="__PUBLIC__/Image/yhxt/human/first.png" x="0" y="0" height="554px" width="770px"></image>
-								<image id="human_animate_1" xlink:href="__PUBLIC__/Image/yhxt/human/first_ani1.png" x="173px" y="25px" width="190px" height="247px"></image>
-								<image id="human_animate_2" xlink:href="__PUBLIC__/Image/yhxt/human/first_ani2.png" x="173px" y="25px" width="190px" height="247px"></image>
-								<image id="human_animate_3" xlink:href="__PUBLIC__/Image/yhxt/human/first_ani3.png" x="261px" y="151px" width="64px" height="160px"></image>
-								<image id="human_animate_4" xlink:href="__PUBLIC__/Image/yhxt/human/first_ani4.png" x="403px" y="0px" width="147px" height="79px"></image>
+				    		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 770 652" xml:space="preserve">
+								<image xlink:href="img/cashier.png" x="0" y="0" height="652px" width="770px"></image>
+								<image id="alipay_animate" xlink:href="img/alipay.png" x="73px" y="125px" width="75px" height="112px"></image>								
+								<image id="quickpass_animate" xlink:href="img/quickpass.png" x="493px" y="80px" width="54px" height="81px"></image>
 							</svg>
 			    		</div>
 				    	<div class="desc">
@@ -61,16 +54,15 @@
 			<div class="swiper-container assistant">
 				<div class="swiper-wrapper">
 				    <div class="swiper-slide">
+							<div class="image">
+								<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 757 584" xml:space="preserve">
+									<image xlink:href="img/assistant.png" x="0" y="0" height="584px" width="757px"></image>
+								</svg>
+							</div>
 				    	<div class="desc">
 				    		<p>高效便捷的线上电商分销及线下会员服务</p>
 				    		<p>线上会员一键下单自助购买，高效便捷，库存情况实时更新，缺货提醒。</br>线下会员进店自助选购，扫码付款，简单方便。</p>
 				    		<div class="use_now" data-name="wfx" >立即使用</div>
-			    		</div>
-			    		<div class="image">
-				    		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 749 615" xml:space="preserve">
-								<image xlink:href="__PUBLIC__/Image/yhxt/business/first.png" x="0" y="0" height="615px" width="749px"></image>
-								<image id="business_animate_1" xlink:href="__PUBLIC__/Image/yhxt/business/first_ani.png" x="39px" y="74px" width="183px" height="169px" ></image>
-							</svg>
 			    		</div>
 				    </div>
 				 </div>
@@ -95,8 +87,9 @@
 				<div class="swiper-wrapper">
 				    <div class="swiper-slide">
 				    	<div class="image">
-				    		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 770 513" xml:space="preserve">
-								<image xlink:href="__PUBLIC__/Image/yhxt/market/first.png" x="0" y="0" height="513px" width="770px"></image>
+				    		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 757 591" xml:space="preserve">
+								<image xlink:href="img/marketing.png" x="0" y="0" height="591px" width="757px"></image>
+								<image id="clock_animate" xlink:href="img/clock.png" x="580px" y="100px" height="42px" width="51px"></image>
 							</svg>
 				    	</div>
 				    	<div class="desc">
@@ -130,25 +123,11 @@
 				<div class="map-image">
 					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Map" x="0px" y="0px" viewBox="0 0 3000 1406" xml:space="preserve">
 						<image id="map-background" xlink:href="" x="0" y="0" height="1600px" width="3000px"></image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/gif/1.gif" x="1395px" y="1155px" width="59.5px" height="71.5px"></image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/gif/2.gif" x="1754px" y="628px" width="58px" height="66px"></image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/gif/3.gif" x="1718px" y="84px" width="69px" height="108px"></image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/gif/4.gif" x="2200px" y="245px" width="104px" height="67px"></image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/gif/5.gif" x="1654px" y="28px" width="72px" height="65px"></image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/gif/6.gif" x="1289px" y="89px" width="120px" height="108px"></image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/gif/7.gif" x="1813px" y="351px" width="72px" height="149px"></image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/gif/8.gif" x="1183px" y="895px" width="82px" height="107px"></image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/gif/9.gif" x="2275px" y="479px" width="86px" height="94px"></image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/gif/12.gif" x="897px" y="379px" width="90px" height="75px"></image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/gif/4.gif" x="1320px" y="907px" width="104px" height="67px"></image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/css3/bus5.png" x="12.9%" y="97%" width="140px" height="105px">
-							<animate attributeName="x" values="12.9%;0%" dur="2s" repeatCount="indefinite"></animate>
-							<animate attributeName="y" values="97%;75%" dur="2s" repeatCount="indefinite"></animate>
-							<animate attributeName="opacity" values="0.5;1;0" dur="2s" repeatCount="indefinite"></animate>
-						</image>
-						<image xlink:href="__PUBLIC__/Image/yhxt/index/css3/persononbike.png" x="2796px" y="758px" width="100px" height="154px" >
-							<animate attributeName="y" values="758px;862px;" dur="3s" repeatCount="indefinite"></animate>
-							<animate attributeName="x" values="2796px;2682px" dur="3s" repeatCount="indefinite"></animate>
+						<image xlink:href="img/people_1.gif" x="1220px" y="1000px" width="100px" height="100px"></image>
+						<image xlink:href="img/monument.png" x="12.9%" y="97%" width="61px" height="100px">
+							<animate attributeName="x" values="12.9%;0%;0%;0%;0%" dur="10s" repeatCount="indefinite"></animate>
+							<animate attributeName="y" values="97%;75%;75%;75%;75%" dur="10s" repeatCount="indefinite"></animate>
+							<animate attributeName="opacity" values="0.5;1;0;0;0;0;0;0;0" dur="10s" repeatCount="indefinite"></animate>
 						</image>
 					</svg>
 				</div>
@@ -158,6 +137,10 @@
 	</body>
 </html>
 <script>
+var loadingdisplayed = false;
+setTimeout(function(){
+	loadingdisplayed = true;
+}, 5000);
 function UrlParam(){
 	var name,value;
 	var str=window.location.href;
@@ -212,9 +195,9 @@ $(function(){
 	FastClick.attach(document.body);
 	//移动端更换背景图为小尺寸
 	if(isM()){
-		$("#map-background").attr("xlink:href","img/bg.png");
+		$("#map-background").attr("xlink:href","img/bg.jpg");
 	}else{
-		$("#map-background").attr("xlink:href","img/bg.png");
+		$("#map-background").attr("xlink:href","img/bg.jpg");
 	}
 	//数据初始化
 	var map_level_data = [{w:3000,h:1600},{w:3000,h:1600}];
@@ -234,7 +217,7 @@ $(function(){
 			name:'assistant',
 			classname:'assistant',
 			title:'导购员',
-			position:{x:'0.4160',y:'0.1530'},
+			position:{x:'0.4660',y:'0.3530'},
 			content:{
 				title:'优化线上电商分销及线下会员服务',
 				txt:'线上会员一键下单自助购买，高效便捷</br>线下进店自助选购，扫码付款，简单方便。'
@@ -250,7 +233,7 @@ $(function(){
 			name:'finance',
 			classname:'finance',
 			title:'财务室',
-			position:{x:'0.3480',y:'0.3940'},
+			position:{x:'0.5480',y:'0.4940'},
 			content:{
 				title:'专业多维度的账目数据',
 				txt:'结算总览，交易明细及库存情况</br>清晰明了，多种查询维度报表下载</br>方便财务对账处理。'
@@ -258,7 +241,7 @@ $(function(){
       name:'marketing',
       classname:'marketing',
       title:'市场部',
-      position:{x:'0.1480',y:'0.1940'},
+      position:{x:'0.5880',y:'0.1940'},
       content:{
         title:'会员收集，大数据分析',
         txt:'会员管理，会员营销，会员行为数据</br>商业智能分析，助您在激烈的市场</br>竞争中一起绝尘。'
@@ -297,14 +280,22 @@ $(function(){
 	var timer_start = new Date().getTime();
 	//内容加载结束，移除loading
 	$(window).load(function(){
-		var timer_end = new Date().getTime();
-		var timer_lazy = 1600-(timer_end-timer_start) ||0;
-		console.log(timer_start,timer_end,timer_end-timer_start);
-		setTimeout(function(){
-			$(".load").addClass("over");
-			$(".map-tools").addClass("show");
-		},timer_lazy);
-
+		function waitforloading(){
+			setInterval(function(){
+				if (!loadingdisplayed){
+					waitforloading();
+				} else {
+					var timer_end = new Date().getTime();
+					var timer_lazy = 1600-(timer_end-timer_start) ||0;
+					console.log(timer_start,timer_end,timer_end-timer_start);
+					setTimeout(function(){
+						$(".load").addClass("over");
+						$(".map-tools").addClass("show");
+					},timer_lazy);
+				}
+			},500);
+		}
+		waitforloading();
 		//百度统计代码
 		// (function() {
 		//     var hm1 = document.createElement("script");
