--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			    		<div class="image">
 				    		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 770 652" xml:space="preserve">
 								<image xlink:href="img/cashier.png" x="0" y="0" height="652px" width="770px"></image>
-								<image id="alipay_animate" xlink:href="img/alipay.png" x="73px" y="125px" width="75px" height="112px"></image>								
+								<image id="alipay_animate" xlink:href="img/alipay.png" x="73px" y="125px" width="75px" height="112px"></image>
 								<image id="quickpass_animate" xlink:href="img/quickpass.png" x="493px" y="80px" width="54px" height="81px"></image>
 							</svg>
 			    		</div>
@@ -164,7 +164,10 @@
 				<div class="map-image">
 					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Map" x="0px" y="0px" viewBox="0 0 3000 1600" xml:space="preserve">
 						<image id="map-background" xlink:href="" x="0" y="0" height="1600px" width="3000px"></image>
-						<image xlink:href="img/people_1.gif" x="1220px" y="1000px" width="100px" height="100px"></image>
+						<image xlink:href="img/gif/1.gif" x="1220px" y="1000px" width="100px" height="100px"></image>
+						<image xlink:href="img/gif/2.gif" x="1540px" y="485px" width="60px" height="60px"></image>
+						<image xlink:href="img/gif/3.gif" x="1275px" y="495px" width="40px" height="40px"></image>
+						<image xlink:href="img/gif/4.gif" x="1440px" y="760px" width="44px" height="44px"></image>
 						<image xlink:href="img/monument.png" x="12.9%" y="97%" width="61px" height="100px">
 							<animate attributeName="x" values="12.9%;0%;0%;0%;0%" dur="10s" repeatCount="indefinite"></animate>
 							<animate attributeName="y" values="97%;75%;75%;75%;75%" dur="10s" repeatCount="indefinite"></animate>
