--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
 				<div class="map-image">
 					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Map" x="0px" y="0px" viewBox="0 0 3000 1600" xml:space="preserve">
 						<image id="map-background" xlink:href="" x="0" y="0" height="1600px" width="3000px"></image>
+						<image class="cloud" xlink:href="img/cloud_1.png" x="787px" y="350px" width="299px" height="80px"></image>
+						<image class="cloud" xlink:href="img/cloud_2.png" x="1264px" y="119px" width="299px" height="80px"></image>
+						<image class="cloud" xlink:href="img/cloud_3.png" x="75px" y="159px" width="613px" height="164px"></image>
+						<image class="cloud" xlink:href="img/cloud_4.png" x="55px" y="520px" width="246px" height="67px"></image>
 						<image xlink:href="img/gif/1.gif" x="1220px" y="1000px" width="100px" height="100px"></image>
 						<image xlink:href="img/gif/2.gif" x="1540px" y="485px" width="60px" height="60px"></image>
 						<image xlink:href="img/gif/3.gif" x="1275px" y="495px" width="40px" height="40px"></image>
