--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ $(function(){
 				}
 			},500);
 		}
-		waitforloading();
+		// waitforloading();
 		//百度统计代码
 		// (function() {
 		//     var hm1 = document.createElement("script");
