--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			    		</div>
 				    	<div class="desc">
 				    		<p>支付全通道，智能POS聚合收银</p>
-				    		<p>通过翼码多米收银台实现一对多支付宝支付、微信支付、翼支付等</br>多种互联网收单与传统银行卡收单的结合；同时可实现多业务的</br>核销、财务数据、会员积分等数据清算。</p>
+				    		<p>通过翼码多米收银台实现一对多</br>支付宝支付、微信支付、翼支付等</br>多种互联网收单与传统银行卡收单的结合</br>同时可实现多业务的核销、财务数据、会员积分等数据清算</p>
 			    			<div class="use_now" data-name="dlhd">立即使用</div>
 				    	</div>
 				    </div>
